Note, the changes for the last STABLE release start with release
2.4.20.

-------------------------------------------------------------------

Changes in beta release 2.5.26 (not released yet)

* New features:

   - New MenuStyle option VerticalMargins.

* Bug fixes:

   - Fixed crash in ARGB visual detection code.
   - Fixed compilation without XRender support.
   - Fixed drawing of background pictures in menu items and titles.
   - Fixed hadling of shaped windows.
   - Fixed a 64-bit bug in the EWMH code.

-------------------------------------------------------------------

Changes in beta release 2.5.25 (26-Feb-2008)

* New features:

   - Handle the STATE_ADD command of the EWMH _NET_WM_STATE
     message from version 1.3 of the EWMH spec.
   - Support transparency in ARGB windows

* Bug Fixes:

   - Fixed problem with windows disappearing when created
     unless the style Unmanaged was used.
   - Edge move delay was used as resistance for the top edge.
   - Fixed a parsing problem of the screen argument of the
     SnapAttraction style.
   - Some html documentation files were not installed.
   - Fixed a memory leak in internationalized font handling.
   - Fixed a bug in MinOverlap placement.
   - Fixed the StickyAcrossPages style in the FvwmPager.
   - Fixed the determination of the X charset on UTF-8 systems.
   - Fixed a crash when certain EWMH messages were sent to
     unmanaged windows.
   - Fixed a memory leak in multibyte codepage code.
   - Ignore the EWMH staysontop and staysonbottom hints if the
     EWMHIgnoreStackingOrderHints style is used.
   - Fixed a sporadic crash when the root background set by gnome,
     fvwm-root, esetroot etc. changes and a root transparent
     colour set is used.
   - Fixed spradic crash in modules with root transparent
     background from colour sets.
   - Fixed a possible crash if the last active module fails.

-------------------------------------------------------------------
