@@ -1,3 +1,10 @@
+2008-04-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* FvwmButtons/FvwmButtons.h:
+	* FvwmButtons/parse.c (ParseButton, ParseButton):
+	* FvwmButtons/draw.c (MakeButton):
+	FvwmButtons: new button alignment option "top"
+
 2008-01-22  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* FvwmPager/FvwmPager.h:
